[package]
name = "rustlink"
version = "0.2.0"
authors = ["Michal Podhradsky <mpodhradsky@galois.com>"]

[dependencies]
#pprzlink = { git = "https://github.com/paparazzi/pprzlink-rust.git" }
pprzlink = { path = "/home/michal/Workspace/rust_projects/pprzlink_rust" }
ivyrust = {git = "https://github.com/paparazzi/ivy-rust" }
clap = "2.27.1"
serial="0.4"
rusthacl = { git = "https://github.com/podhrmic/rusthacl.git" }
rand = "0.3.18"
libc = "0.2"
regex = "0.2"