[package]
name = "rustlink"
version = "0.2.0"
authors = ["Michal Podhradsky <mpodhradsky@galois.com>"]
edition = "2018"

[dependencies]
pprzlink = { git = "https://github.com/paparazzi/pprzlink-rust.git", branch = "refactor"}
ivyrust = {git = "https://github.com/paparazzi/ivy-rust" }
clap = "2.27.1"
serial="0.4"
rand = "0.3.18"
libc = "0.2"
regex = "0.2"
